--- a/references.bib
+++ b/references.bib
@@ -90,3 +90,50 @@
   publisher={APS},
   doi={10.1103/RevModPhys.77.1}
 }
+
+@article{hartung1999alternative,
+  title={An alternative method for meta-analysis},
+  author={Hartung, Joachim},
+  journal={Biometrical Journal: Journal of Mathematical Methods in Biosciences},
+  volume={41},
+  number={8},
+  pages={901--916},
+  year={1999},
+  publisher={Wiley Online Library},
+  doi={10.1002/(SICI)1521-4036(199912)41:8<901::AID-BIMJ901>3.0.CO;2-W}
+}
+
+@article{sidik2002simple,
+  title={A simple confidence interval for meta-analysis},
+  author={Sidik, Kurex and Jonkman, Jeffrey N},
+  journal={Statistics in medicine},
+  volume={21},
+  number={21},
+  pages={3153--3159},
+  year={2002},
+  publisher={Wiley Online Library},
+  doi={10.1002/sim.1262}
+}
+
+@article{inthout2014hartung,
+  title={The Hartung-Knapp-Sidik-Jonkman method for random effects meta-analysis is straightforward and considerably outperforms the standard DerSimonian-Laird method},
+  author={IntHout, Joanna and Ioannidis, John PA and Borm, George F},
+  journal={BMC medical research methodology},
+  volume={14},
+  pages={1--12},
+  year={2014},
+  publisher={Springer},
+  doi={10.1186/1471-2288-14-25}
+}
+
+@article{wiksten2016hartung,
+  title={Hartung--Knapp method is not always conservative compared with fixed-effect meta-analysis},
+  author={Wiksten, Anna and R{\"u}cker, Gerta and Schwarzer, Guido},
+  journal={Statistics in medicine},
+  volume={35},
+  number={15},
+  pages={2503--2515},
+  year={2016},
+  publisher={Wiley Online Library},
+  doi={10.1002/sim.6879}
+}
