start building out paper expansion

--- a/references.bib
+++ b/references.bib
@@ -137,3 +137,99 @@
   publisher={Wiley Online Library},
   doi={10.1002/sim.6879}
 }
+
+@book{conover1999practical,
+  title={Practical nonparametric statistics},
+  author={Conover, William Jay},
+  year={1999},
+  publisher={john wiley \& sons}
+}
+
+# speed of light sources
+@article{froome1971velocity,
+  title={The Velocity of Light And Radio Waves},
+  author={Froome, KD and Essen, L and Rhodes, Richard A},
+  journal={Physics Today},
+  volume={24},
+  number={5},
+  pages={49--49},
+  year={1971},
+  publisher={American Institute of Physics}
+}
+
+@article{birge1934velocity,
+  title={The velocity of light},
+  author={Birge, Raymond T},
+  journal={Nature},
+  volume={134},
+  number={3394},
+  pages={771--772},
+  year={1934}
+}
+
+@article{raynaud2013determining,
+  title={Determining the speed of light (1676-1983): An internalist study in the sociology of science},
+  author={Raynaud, Dominique},
+  journal={L’Ann{\'e}e sociologique},
+  volume={63},
+  number={2},
+  pages={359--398},
+  year={2013},
+  publisher={Presses Universitaires de France}
+}
+
+@article{evenson1972speed,
+  title={Speed of light from direct frequency and wavelength measurements of the methane-stabilized laser},
+  author={Evenson, KM and Wells, JS and Petersen, FR and Danielson, BL and Day, Gordon W and Barger, RL and Hall, JL},
+  journal={Physical Review Letters},
+  volume={29},
+  number={19},
+  pages={1346},
+  year={1972},
+  publisher={APS}
+}
+
+@article{blaney1974measurement,
+  title={Measurement of the speed of light},
+  author={Blaney, TG and Bradley, CC and Edwards, GJ and Jolliffe, BW and Knight, DJE and Rowley, WRC and Shotton, KC and Woods, PT},
+  journal={Nature},
+  volume={251},
+  number={5470},
+  pages={46--46},
+  year={1974},
+  publisher={Nature Publishing Group UK London}
+}
+
+###########################
+
+# density of earth sources
+
+@article{burgess1902value,
+  title={The value of the gravitation constant},
+  author={Burgess, GK},
+  journal={Physical Review (Series I)},
+  volume={14},
+  number={5},
+  pages={257},
+  year={1902},
+  publisher={APS}
+}
+
+@article{sagitov1970current,
+  title={Current Status of Determinations of the Gravitational Constant and the Mass of the Earth.},
+  author={Sagitov, MU},
+  journal={Soviet Astronomy, Vol. 13, p. 712},
+  volume={13},
+  pages={712},
+  year={1970}
+}
+
+@article{hughes2006mean,
+  title={The mean density of the Earth},
+  author={Hughes, David},
+  journal={Journal of the British Astronomical Association, Vol. 116, No. 1, p. 21},
+  volume={116},
+  pages={21},
+  year={2006}
+}
+######################
