--- a/references.bib
+++ b/references.bib
@@ -138,6 +138,16 @@
   doi={10.1002/sim.6879}
 }
 
+@article{navas2024review,
+  title={Review of particle physics},
+  author={Navas, S and Amsler, C and Gutsche, T and Hanhart, C and Hern{\'a}ndez-Rey, JJ and Louren{\c{c}}o, C and Masoni, A and Mikhasenko, M and Mitchell, RE and Patrignani, C and others},
+  journal={Physical Review D},
+  volume={110},
+  number={3},
+  pages={030001},
+  year={2024}
+}
+
 @book{conover1999practical,
   title={Practical nonparametric statistics},
   author={Conover, William Jay},
