updates to everything

--- a/references.bib
+++ b/references.bib
@@ -142,19 +142,108 @@
   title={Review of particle physics},
   author={Navas, S and Amsler, C and Gutsche, T and Hanhart, C and Hern{\'a}ndez-Rey, JJ and Louren{\c{c}}o, C and Masoni, A and Mikhasenko, M and Mitchell, RE and Patrignani, C and others},
   journal={Physical Review D},
+  publisher={American Physical Society},
   volume={110},
   number={3},
   pages={030001},
-  year={2024}
+  year={2024},
+  doi={10.1103/PhysRevD.110.030001}
 }
 
 @book{conover1999practical,
   title={Practical nonparametric statistics},
   author={Conover, William Jay},
   year={1999},
-  publisher={john wiley \& sons}
+  publisher={John Wiley \& Sons}
 }
 
+@article{wilcoxon1945individual,
+ ISSN = {00994987},
+ author = {Frank Wilcoxon},
+ journal = {Biometrics Bulletin},
+ number = {6},
+ pages = {80--83},
+ publisher = {[International Biometric Society, Wiley]},
+ title = {Individual Comparisons by Ranking Methods},
+ urldate = {2025-06-18},
+ volume = {1},
+ year = {1945},
+ doi = {10.2307/3001968}
+}
+
+
+@article{taylor1982numerical,
+  title={Numerical comparisons of several algorithms for treating inconsistent data in a least-squares adjustment of the fundamental constants},
+  author={Taylor, Barry N},
+  year={1982},
+  institution={US. Nat. Bureau Stand.}
+}
+
+@book{ipcc2021physical,
+    address = {Cambridge, UK and New York, NY, USA},
+    author = {Intergovernmental Panel on Climate Change (IPCC)},
+    doi = {10.1017/9781009157896},
+    editor = {Masson-Delmotte, V. and Zhai, P. and Pirani, A. and Connors, S. L. and Péan, C. and Berger, S. and Caud, N. and Chen, Y. and Goldfarb, L. and Gomis, M. I. and Huang, M. and Leitzell, K. and Lonnoy, E. and Matthews, J. B. R. and Maycock, T. K. and Waterfield, T. and Yelekçi, O. and Yu, R. and Zhou, B.},
+    publisher = {Cambridge University Press},
+    title = {Climate Change 2021: The Physical Science Basis. Contribution of Working Group I to the Sixth Assessment Report of the Intergovernmental Panel on Climate Change},
+    year = {2023}
+}
+
+@book{winsberg2018philosophy,
+    place={Cambridge},
+    title={Philosophy and Climate Science},
+    publisher={Cambridge University Press},
+    author={Winsberg, Eric},
+    year={2018},
+    doi={10.1017/9781108164290}
+}
+
+@phdthesis{harris2021conceptualizing,
+  title={Conceptualizing uncertainty: the IPCC, model robustness and the weight of evidence},
+  author={Harris, Margherita},
+  year={2021},
+  school={London School of Economics and Political Science},
+  doi={10.21953/lse.00004355}
+}
+
+@book{clarke1910recalculation,
+  author = {Clarke, Frank Wigglesworth},
+  address = {District of Columbia},
+  title = {The constants of nature. Part V, A recalculation of the atomic weights},
+  year = {1910},
+  publisher = {The Smithsonian Institution}
+}
+
+
+###########################
+# astronomical unit sources
+
+@article{standish2004astronomical,
+  title={The astronomical unit now},
+  author={Standish, EM},
+  journal={Proceedings of the International Astronomical Union},
+  volume={2004},
+  number={IAUC196},
+  pages={163--179},
+  year={2004},
+  publisher={Cambridge University Press},
+  doi={10.1017/S1743921305001365}
+}
+
+@article{atkins1964determination,
+  title={The Determination of the Astronomical Unit},
+  author={Atkins, GR},
+  journal={Monthly Notes of the Astron. Soc. Southern Africa, Vol. 23, p. 126},
+  volume={23},
+  pages={126},
+  year={1964}
+}
+
+
+
+
+
+###########################
 # speed of light sources
 @article{froome1971velocity,
   title={The Velocity of Light And Radio Waves},
@@ -210,6 +299,121 @@
   publisher={Nature Publishing Group UK London}
 }
 
+@article{clarke1881abstract,
+  title={An abstract of the results obtained in a recalculation of the atomic weights},
+  author={Clarke, Frank Wigglesworth},
+  journal={The London, Edinburgh, and Dublin Philosophical Magazine and Journal of Science},
+  volume={12},
+  number={73},
+  pages={101--112},
+  year={1881},
+  publisher={Taylor \& Francis},
+  doi={10.1080/14786448108627075}
+}
+
+@book{harkness1891solar,
+  title={The solar parallax and its related constants: including the figure and density of the earth},
+  author={Harkness, William},
+  year={1891},
+  publisher={US Government Printing Office}
+}
+
+@article{birge1919most,
+  title={The most probable value of the Planck constant h},
+  author={Birge, Raymond T},
+  journal={Physical Review},
+  volume={14},
+  number={4},
+  pages={361},
+  year={1919},
+  publisher={APS},
+  doi={10.1103/PhysRev.14.361}
+}
+
+@article{birge1929probable,
+  title={Probable values of the general physical constants},
+  author={Birge, Raymond T},
+  journal={Reviews of Modern Physics},
+  volume={1},
+  number={1},
+  pages={1},
+  year={1929},
+  publisher={APS}
+}
+
+@article{birge1932calculation,
+  title={The calculation of errors by the method of least squares},
+  author={Birge, Raymond T},
+  journal={Physical Review},
+  volume={40},
+  number={2},
+  pages={207},
+  year={1932},
+  publisher={APS}
+}
+
+@article{stone1961opinion,
+  title={The opinion pool},
+  author={Stone, Mervyn},
+  journal={The Annals of Mathematical Statistics},
+  pages={1339--1342},
+  year={1961},
+  publisher={JSTOR}
+}
+
+@book{laplace1951essay,
+  address={New York},
+  title={A Philosophical Essay on Probabilities},
+  publisher={Dover Publications},
+  author={Laplace, Pierre Simon},
+  editor={Truscott, Frederick Wilson and Emory, Frederick Lincoln},
+  year={1951}
+}
+
+@book{cotes1722opera,
+  title={Opera Miscellanea},
+  author={Cotes, Roger},
+  year={1722},
+  editor={Smith, Robert},
+}
+
+@book{gauss1857theory,
+  title={Theory of the motion of the heavenly bodies moving about the sun in conic sections},
+  author={Gauss, Carl Friedrich},
+  year={1857},
+  editor={Davis, Charles Henry},
+  publisher={Little, Brown}
+}
+
+@book{airy1861algebraical,
+  title={On the algebraical and numerical theory of errors of observations and the combination of observations},
+  author={Airy, George Biddell},
+  year={1861},
+  publisher={Macmillan}
+}
+
+@article{bacharach1979normal,
+  title={Normal bayesian dialogues},
+  author={Bacharach, Michael},
+  journal={Journal of the American Statistical Association},
+  volume={74},
+  number={368},
+  pages={837--846},
+  year={1979},
+  publisher={Taylor \& Francis}
+}
+
+@article{koepke2017consensus,
+  title={Consensus building for interlaboratory studies, key comparisons, and meta-analysis},
+  author={Koepke, Amanda and Lafarge, Thomas and Possolo, Antonio and Toman, Blaza},
+  journal={Metrologia},
+  volume={54},
+  number={3},
+  pages={S34},
+  year={2017},
+  publisher={IOP Publishing}
+}
+
 ###########################
 
 # density of earth sources
@@ -222,7 +426,8 @@
   number={5},
   pages={257},
   year={1902},
-  publisher={APS}
+  publisher={APS},
+  doi={10.1103/PhysRevSeriesI.14.257}
 }
 
 @article{sagitov1970current,
