--- a/references.bib
+++ b/references.bib
@@ -214,6 +214,18 @@
   publisher = {The Smithsonian Institution}
 }
 
+@article{roos1970review,
+  title={Review of particle properties},
+  author={Roos, Matts and Bricman, Claude and Barbaro-Galtieri, Angela and Price, Leroy R and Rittenberg, Alan and Rosenfeld, Arthur H and Barash-Schmidt, Naomi and S{\"o}ding, Paul and Chen, Chih Yung and Wohl, Charles G and others},
+  journal={Physics Letters B},
+  volume={33},
+  number={1},
+  pages={i--127},
+  year={1970},
+  publisher={Elsevier},
+  doi={{10.1016/0370-2693(70)90211-X}}
+}
+
 
 ###########################
 # astronomical unit sources
